--- a/src/translations/cs.json
+++ b/src/translations/cs.json
@@ -1,3 +1,14 @@
 {
-  "owdz74": "BROTHERHOOD Mince"
+  "IH+ANq": "O Bortherhood",
+  "IKmvQj": "Mage Brotherhood si klade za cíl vytvořit vůbec první decentralizovanou ekonomiku pro hru plnou magických věcí.",
+  "home_brotherhood_coin": "BROTHERHOOD MINCE",
+  "home_collection_subtitle": "Kolekce temných rytířů ERC1155 vyjde koncem tohoto měsíce.",
+  "home_collection_title": "Nadcházející kolekce",
+  "home_game_preview_subtitle": "Naše herní oddělení bylo zaneprázdněno! Pro naše fanoušky jsme udělali krátkou in-game ukázku.",
+  "home_game_preview_title": "Krátký film ve hře",
+  "home_hero_subtitle": "NFT P2E hra poháněná blockchainem s rozšířením o AR, pod střechou DAO.",
+  "home_hero_title": "Vítězství, sláva a <span>coiny.</span>",
+  "home_polygon_scaling_comming_soon": "JIŽ BRZY",
+  "home_polygon_scaling_text": "S vlastním blockchainem díky Polygonu Edge budou mikrotransakce ve hře létat neuvěřitelnou rychlostí a stát jen zlomek poplatků.",
+  "home_polygon_scaling_title": "POLYGON POS L2 SCALING"
 }
