--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,3 +1,14 @@
 {
-  "owdz74": "BROTHERHOOD COIN"
+  "IH+ANq": "About Bortherhood",
+  "IKmvQj": "Mage Brotherhood is aiming to create first-ever decentralized economy for a game full of magical things.",
+  "home_brotherhood_coin": "BROTHERHOOD COIN",
+  "home_collection_subtitle": "Collection of dark night ERC1155 comming later this month.",
+  "home_collection_title": "Upcomming Collection",
+  "home_game_preview_subtitle": "Or game department has been quite busy, watch short movie we put together for our fans!",
+  "home_game_preview_title": "In-Game Short Movie",
+  "home_hero_subtitle": "NFT P2E game powered by blockchain enhanced by AR, managed by DAO.",
+  "home_hero_title": "Play for victory, earn <span>rewards.</span>",
+  "home_polygon_scaling_comming_soon": "COMMING SOON",
+  "home_polygon_scaling_text": "With Polygon Edge custom blockchain, in-game microtransactions will fly with incredible speed and will cost just a fraction of network fees.",
+  "home_polygon_scaling_title": "POLYGON POS L2 SCALING"
 }
