--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,38 @@
 {
-  "owdz74": {
+  "IH+ANq": {
+    "defaultMessage": "About Bortherhood"
+  },
+  "IKmvQj": {
+    "defaultMessage": "Mage Brotherhood is aiming to create first-ever decentralized economy for a game full of magical things."
+  },
+  "home_brotherhood_coin": {
     "defaultMessage": "BROTHERHOOD COIN"
+  },
+  "home_collection_subtitle": {
+    "defaultMessage": "Collection of dark night ERC1155 comming later this month."
+  },
+  "home_collection_title": {
+    "defaultMessage": "Upcomming Collection"
+  },
+  "home_game_preview_subtitle": {
+    "defaultMessage": "Or game department has been quite busy, watch short movie we put together for our fans!"
+  },
+  "home_game_preview_title": {
+    "defaultMessage": "In-Game Short Movie"
+  },
+  "home_hero_subtitle": {
+    "defaultMessage": "NFT P2E game powered by blockchain enhanced by AR, managed by DAO."
+  },
+  "home_hero_title": {
+    "defaultMessage": "Play for victory, earn <span>rewards.</span>"
+  },
+  "home_polygon_scaling_comming_soon": {
+    "defaultMessage": "COMMING SOON"
+  },
+  "home_polygon_scaling_text": {
+    "defaultMessage": "With Polygon Edge custom blockchain, in-game microtransactions will fly with incredible speed and will cost just a fraction of network fees."
+  },
+  "home_polygon_scaling_title": {
+    "defaultMessage": "POLYGON POS L2 SCALING"
   }
 }
