--- a/src/translations/cs.json
+++ b/src/translations/cs.json
@@ -1,6 +1,12 @@
 {
-  "IH+ANq": "O Bortherhood",
+  "+14VoL": "Staking",
+  "+lWQIJ": "Tržiště",
+  "9fPQ1/": "Litepaper",
+  "IH+ANq": "O Bortherhoodu",
   "IKmvQj": "Mage Brotherhood si klade za cíl vytvořit vůbec první decentralizovanou ekonomiku pro hru plnou magických věcí.",
+  "W8nHSd": "FAQ",
+  "cg1VJ2": "Připojte peněženku",
+  "ejEGdx": "Domů",
   "home_brotherhood_coin": "BROTHERHOOD MINCE",
   "home_collection_subtitle": "Kolekce temných rytířů ERC1155 vyjde koncem tohoto měsíce.",
   "home_collection_title": "Nadcházející kolekce",
@@ -10,5 +16,9 @@
   "home_hero_title": "Vítězství, sláva a <span>coiny.</span>",
   "home_polygon_scaling_comming_soon": "JIŽ BRZY",
   "home_polygon_scaling_text": "S vlastním blockchainem díky Polygonu Edge budou mikrotransakce ve hře létat neuvěřitelnou rychlostí a stát jen zlomek poplatků.",
-  "home_polygon_scaling_title": "POLYGON POS L2 SCALING"
+  "home_polygon_scaling_title": "POLYGON POS L2 SCALING",
+  "qj1uhz": "Odpojit",
+  "s8BnAC": "Směnárna",
+  "tfQoB8": "Affiliate",
+  "ulh3kf": "Sbírky"
 }
