--- a/src/translations/cs.json
+++ b/src/translations/cs.json
@@ -4,9 +4,21 @@
   "9fPQ1/": "Litepaper",
   "IH+ANq": "O Bortherhoodu",
   "IKmvQj": "Mage Brotherhood si klade za cíl vytvořit vůbec první decentralizovanou ekonomiku pro hru plnou magických věcí.",
+  "NBPZxQ": "LitePaper",
   "W8nHSd": "FAQ",
+  "account_page_title": "Účet",
+  "affiliate_page_description_p1": "Chcete si vydělat stejné peníze navíc? Možná pro tebe něco máme! Náš první decentralizovaný marketing umožňuje odměnit vás za propagaci a pro tovjí komunitu zlevněním mint.",
+  "affiliate_page_description_p2": "Pokaždé, když někdo vyrazí váš kód, budete odměněni bratrskou mincí! Výše odměny se liší v závislosti na ceně etherea plynu, ale můžete očekávat pěkné zisky! Zaregistrujte si kód níže a začněte vydělávat.",
+  "affiliate_page_form_helper_text": "Například ADAM123",
+  "affiliate_page_form_label": "Kód",
+  "affiliate_page_form_submit_button_text": "Registrační kód",
+  "affiliate_page_form_title": "Registrovat",
+  "affiliate_page_title": "Přidružený",
   "cg1VJ2": "Připojte peněženku",
   "ejEGdx": "Domů",
+  "faq_page_description": "Zde jsou zodpovězeny některé z nejčastěji kladených otázek. Chápeme, že ne každá zvědavá mysl bude s tímto seznamem prostě spokojená, takže pro takové bytosti existuje",
+  "faq_page_description_link_text": "Svar",
+  "faq_page_title": "Faq",
   "home_brotherhood_coin": "BROTHERHOOD MINCE",
   "home_collection_subtitle": "Kolekce temných rytířů ERC1155 vyjde koncem tohoto měsíce.",
   "home_collection_title": "Nadcházející kolekce",
@@ -17,8 +29,29 @@
   "home_polygon_scaling_comming_soon": "JIŽ BRZY",
   "home_polygon_scaling_text": "S vlastním blockchainem díky Polygonu Edge budou mikrotransakce ve hře létat neuvěřitelnou rychlostí a stát jen zlomek poplatků.",
   "home_polygon_scaling_title": "POLYGON POS L2 SCALING",
+  "jXdcLd": "PDF LITEPAPER",
   "qj1uhz": "Odpojit",
   "s8BnAC": "Směnárna",
+  "staking_page_description": "Je zásadní a klíčovou součástí našeho ekosystému. Umožňuje rovnoměrné rozdělení tokenů, odměňuje dlouhodobé investory a zabraňuje podvádění ve hře. Více o staking out",
+  "staking_page_description_link_text": "Litepaper",
+  "staking_page_staking_instruction": "Vyberte prosím postavu, kterou chcete vsadit.",
+  "staking_page_tab_label_staking": "Vytyčování",
+  "staking_page_tab_label_your_wallet": "Tvoje peněženka",
+  "staking_page_table_header_actions": "Akce",
+  "staking_page_table_header_amount": "Množství",
+  "staking_page_table_header_nft_token": "Token NFT",
+  "staking_page_title": "Vytyčování",
+  "staking_page_token_stake_button_text_select": "Vyberte Pro vytyčování",
+  "staking_page_token_stake_button_text_unselect": "Odebrat výběr",
+  "swap_page_chart_button_text": "Graf zobrazení obchodování",
+  "swap_page_label_receive": "Dostávat",
+  "swap_page_label_sell": "Prodat",
+  "swap_page_swap_button_text": "Vyměňte",
+  "swap_page_switch_button_text": "Přepínač",
+  "swap_page_terms_acceptance_link_text": "podmínky",
+  "swap_page_terms_acceptance_text": "Kliknutím na \"SWAP\" souhlasíte",
+  "swap_page_title": "Vyměňte",
   "tfQoB8": "Affiliate",
+  "transaction_stepper_hash_title": "Hash transakce",
   "ulh3kf": "Sbírky"
 }
