--- a/src/translations/cs.json
+++ b/src/translations/cs.json
@@ -1,7 +1,10 @@
 {
   "+14VoL": "Staking",
   "+lWQIJ": "Tržiště",
+  "3yk8fB": "Peněženka",
   "9fPQ1/": "Litepaper",
+  "EBDrtq": "Podmínky použití",
+  "FCXIlK": "Hash transakce",
   "IH+ANq": "O Bortherhoodu",
   "IKmvQj": "Mage Brotherhood si klade za cíl vytvořit vůbec první decentralizovanou ekonomiku pro hru plnou magických věcí.",
   "NBPZxQ": "LitePaper",
@@ -29,6 +32,9 @@
   "home_polygon_scaling_comming_soon": "JIŽ BRZY",
   "home_polygon_scaling_text": "S vlastním blockchainem díky Polygonu Edge budou mikrotransakce ve hře létat neuvěřitelnou rychlostí a stát jen zlomek poplatků.",
   "home_polygon_scaling_title": "POLYGON POS L2 SCALING",
+  "home_roadmap_title": "Cestovní mapa",
+  "home_roadmap_upcoming_events": "Připravované akce",
+  "iSM+et": "Všechna práva vyhrazena",
   "jXdcLd": "PDF LITEPAPER",
   "qj1uhz": "Odpojit",
   "s8BnAC": "Směnárna",
@@ -53,5 +59,7 @@
   "swap_page_title": "Vyměňte",
   "tfQoB8": "Affiliate",
   "transaction_stepper_hash_title": "Hash transakce",
-  "ulh3kf": "Sbírky"
+  "ulh3kf": "Sbírky",
+  "vx0nkZ": "Zásady ochrany osobních údajů",
+  "zFegDD": "Kontakt"
 }
