--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,8 +1,10 @@
 {
   "+14VoL": "Staking",
   "+lWQIJ": "Marketplace",
+  "1v/O7j": "Please connect your wallet.",
   "3yk8fB": "Wallet",
   "9fPQ1/": "Litepaper",
+  "DtYelJ": "Transfer",
   "EBDrtq": "Terms of use",
   "FCXIlK": "Transaction hash",
   "IH+ANq": "About Bortherhood",
@@ -18,6 +20,7 @@
   "affiliate_page_form_title": "Register",
   "affiliate_page_title": "Affiliate",
   "cg1VJ2": "Connect Wallet",
+  "d1uESJ": "Assets",
   "ejEGdx": "Home",
   "faq_page_description": "Some of the most frequented questions asked are answered here. We understand that not every curious mind will simply be happy with this list, so for such a beings there is",
   "faq_page_description_link_text": "Discord",
